store all of the information for all projects in Javascript array and create project dinamically

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<section class="my-work" id="my-work">
 			<h2 class="section-title font-crete">My Recents works <span></span></h2>
 			<div class="container cards works grid" id="cards-container">
-				<!-- Card -->
+				<!-- Card 
 				<div class="card-featured format">
 					<div class="featured-image">
 						<img
@@ -117,8 +117,24 @@
 						</ul>
 						<button class="see-project-btn font-inter">See Project</button>
 					</div>
-				</div>
+				</div> -->
 				<!-- Card -->
+				<!--	<div class="card format">
+					<div class="card-content">
+						<h3 class="work-title">My Work Title</h3>
+						<p class="work-description font-inter">
+							I can help you to build beautiful projects, modern and responsive
+							websites, you can see my work on this page, if you are interested
+							do not hesitate to contact me
+						</p>
+						<ul class="categories">
+							<li>Html</li>
+							<li>Css</li>
+							<li>Javascript</li>
+						</ul>
+					</div>
+					<button class="see-project-btn font-inter">See Project</button>
+				</div>
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
@@ -135,7 +151,6 @@
 					</div>
 					<button class="see-project-btn font-inter">See Project</button>
 				</div>
-				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
@@ -152,7 +167,6 @@
 					</div>
 					<button class="see-project-btn font-inter">See Project</button>
 				</div>
-				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
@@ -169,7 +183,6 @@
 					</div>
 					<button class="see-project-btn font-inter">See Project</button>
 				</div>
-				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
@@ -186,7 +199,6 @@
 					</div>
 					<button class="see-project-btn font-inter">See Project</button>
 				</div>
-				<!-- Card -->
 				<div class="card format">
 					<div class="card-content">
 						<h3 class="work-title">My Work Title</h3>
@@ -202,29 +214,12 @@
 						</ul>
 					</div>
 					<button class="see-project-btn font-inter">See Project</button>
-				</div>
-				<!-- Card -->
-				<div class="card format">
-					<div class="card-content">
-						<h3 class="work-title">My Work Title</h3>
-						<p class="work-description font-inter">
-							I can help you to build beautiful projects, modern and responsive
-							websites, you can see my work on this page, if you are interested
-							do not hesitate to contact me
-						</p>
-						<ul class="categories">
-							<li>Html</li>
-							<li>Css</li>
-							<li>Javascript</li>
-						</ul>
-					</div>
-					<button class="see-project-btn font-inter">See Project</button>
-				</div>
+				</div> -->
 				<div class="popup" id="popup">
 					<nav class="btn-close">
 						<i class="fa-solid fa-xmark"></i>
 					</nav>
-					<h3 class="popup-title">
+					<h3 class="popup-title font-crete">
 						Keeping track of hundreds of components website
 					</h3>
 					<ul class="categories">
