--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			<div class="mobile-nav">
 				<ul class="menu-list">
 					<li>
-						<a href="#my-work" class="mb-item">Portfolio</a>
+						<a href="#my-work" class="mb-item font-inter">Portfolio</a>
 					</li>
 					<li>
-						<a href="#about-me" class="mb-item">About</a>
+						<a href="#about-me" class="mb-item font-inter">About</a>
 					</li>
 					<li>
-						<a href="#contact-me" class="mb-item">Contact</a>
+						<a href="#contact-me" class="mb-item font-inter">Contact</a>
 					</li>
 				</ul>
 				<div class="btn-close">
@@ -95,7 +95,6 @@
 		<section class="my-work" id="my-work">
 			<h2 class="section-title font-crete">My Recents works <span></span></h2>
 			<div class="container cards works grid" id="cards-container">
-
 			</div>
 		</section>
 		<section class="about-me" id="about-me">
